2013-01-17  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Http.cc: allow UTC along with GMT in http timestamps.
	* Http.cc: fixed Content-Length handling after PROPFIND.

2013-01-16  Alexander V. Lukyanov <lavv17f@gmail.com>

	* DHT.cc: prefer responded nodes in search over not responded ones.
	* Torrent.cc, Torrent.h: add shutting_down_timer to fix a hang on
	  unresponsive trackers.
	* TorrentTracker.h: use 30 if interval<30.

2013-01-15  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Http.cc: fixed rmdir for WebDAV by adding trailing slash to the path.

2014-01-10  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Torrent.cc, Torrent.h: use SMTaskRef for FDCache.

2013-12-09  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Bencode.cc: fixed a mem leak (thanks to David Binderman).
	* FileCopyFtp.cc, FileCopy.cc: minor style changes.
	* ResMgr.cc, HttpDir.cc: remove unused old code.

2013-12-05  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Http.cc, Http.h: fixed ARRAY_INFO for the case of PROPFIND;
	  use symbolic error codes.

2013-12-04  Alexander V. Lukyanov <lavv17f@gmail.com>

	* MirrorJob.cc, MirrorJob.h: use SMTaskRef for ListInfo.
	* Speedometer.cc, Speedometer.h: don't inherit SMTask.
	* FileCopy.cc, FileCopy.h: don't use SMTaskRef for Speedometer.
	* buffer.h: use plain Ref for Speedometer.

2013-12-03  Alexander V. Lukyanov <lavv17f@gmail.com>

	* FindJobDu.h, Fish.h, Http.h, HttpDir.h, PtyShell.h, SFtp.h:
	  use SMTaskRef for tasks.

2013-11-29  Alexander V. Lukyanov <lavv17f@gmail.com>

	* GetPass.cc, complete.cc: don't call SMTask dtor directly.
	* DirColors.h: no need to inherit SMTask, use ResClient.

2013-11-27  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Http.cc: fixed ARRAY_INFO in keep-alive http connection.

2013-11-26  Alexander V. Lukyanov <lavv17f@gmail.com>

	* CopyJob.cc: show file name in error messages, if not there already.
	* FileCopy.cc: don't check file size when the file is already complete;